changed style in show page, added fixed booking form, added z-index to navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@ body{
 }
 
 .navbar-lewagon {
+  z-index: 10;
   justify-content: space-between;
   background: white;
   position: fixed;
