--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,61 +1,34 @@
-.showpage-container {
-  background: white;
+.banner {
+  height: 60vh;
 }
 
-.narrowed_container {
-  padding: 8px;
-  width: 800px;
-  margin: 0 auto;
-  background-color: rgb(210, 212, 217);
-  border-radius: 8px;
-  opacity: 0.9;
+.item-title {
+  text-align: left;
+  margin: 24px;
 }
 
-#item_title {
-  padding: 24px;
-  color: white;
-  text-align: center;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-  opacity: 1;
+.item-photo {
+  margin: 24px;
 }
 
-#item_photo {
-  margin: 16px;
-  text-align: center;
-  opacity: 1;
+.item-details {
+  margin: 24px;
 }
 
-.item_details {
-  margin: 16px;
-  text-align: center;
+.form {
+  position: fixed;
+  top: 80px;
+  right: 36px;
 }
 
-.item_details p {
-  color: rgb(93, 95, 99);
-}
 
-#form_map {
-  width: 800px;
-}
 
-#form {
-  background: rgb(219, 221, 225);
-  padding: 16px;
-  color: rgb(93, 95, 99);
-  border: 2px solid gray;
-  border-radius: 5px;
-  width: 240px;
-}
-
-.map_container {
+.form-card {
   display: flex;
+  padding: 8px;
+  border: 1px solid rgba(193, 200, 228, 0.8);
+  width: 280px;
+  flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
-
-.return-button {
-  background-color: rgb(231, 235, 239);
-  color: white;
-  margin-top: 8px;
-  border: solid 1px gray;
-}
-
